force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Formula field to show account owner and be none editable.</description>
    <formula>Owner.FirstName +&quot; &quot;+ Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>