force-app/main/default/objects/Account/fields/Account_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Status__c</fullName>
    <label>Account Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Bogus</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>