force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <description>Gives a method for identifying the score of an account for sales prospecting.</description>
    <label>Account Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>