force-app/main/default/objects/Account/fields/Acct_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Acct_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct 18 Character ID</label>
    <type>Text</type>
</CustomField>