force-app/main/default/objects/Account/fields/Activated_Status_and_FMS_Status__c.field-meta.xml
<CustomField>
    <fullName>Activated_Status_and_FMS_Status__c</fullName>
    <description>Updates based on RecurSoft Status and if they have sent out a message yet</description>
    <formula>IF(TEXT(RecurSoft__Status__c) = &quot;Active&quot;, &quot;Customer&quot;, TEXT(RecurSoft__Status__c)) &amp;&quot; - &quot;&amp;If(ISBLANK( Admin_FMS__c ),&quot;Inactive&quot;,&quot;Activated&quot;)</formula>
    <label>Account Status and FMS Status</label>
    <type>Text</type>
</CustomField>