force-app/main/default/objects/Account/fields/Admin_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Admin_Account_Id__c</fullName>
    <label>Admin Account ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>