force-app/main/default/objects/Account/fields/Admin_FMS__c.field-meta.xml
<CustomField>
    <fullName>Admin_FMS__c</fullName>
    <description>Stores the date the office first sent a message through their SR account</description>
    <inlineHelpText>This is the official Activation Date that is Auto-populated every morning.</inlineHelpText>
    <label>Admin FMS</label>
    <type>Date</type>
</CustomField>