force-app/main/default/objects/Account/fields/Admin_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Admin_Last_Sync_Date__c</fullName>
    <description>Stores the date of the last Sync</description>
    <inlineHelpText>This is updated every morning and shows when the last time the office had a successful sync</inlineHelpText>
    <label>Admin Last Sync Date</label>
    <type>Date</type>
</CustomField>