force-app/main/default/objects/Account/fields/Admin_LMS__c.field-meta.xml
<CustomField>
    <fullName>Admin_LMS__c</fullName>
    <description>This stores the date of the last message sent by this office</description>
    <inlineHelpText>This date is when the last message was sent by this office</inlineHelpText>
    <label>Admin LMS</label>
    <type>Date</type>
</CustomField>