force-app/main/default/objects/Account/fields/Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>Admin_Status__c</fullName>
    <inlineHelpText>Is this account&#39;s appAdmin Account Active and sending out messages?</inlineHelpText>
    <label>Admin Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>