force-app/main/default/objects/Account/fields/admin_sync_received__c.field-meta.xml
<CustomField>
    <fullName>admin_sync_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Sync Received</label>
    <type>Checkbox</type>
</CustomField>