force-app/main/default/objects/Account/fields/Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>Admin_Username__c</fullName>
    <inlineHelpText>This is the username for their SR account.  To log in, use your username followed by a &quot;|&quot; and their username and then put in your password</inlineHelpText>
    <label>Admin Username</label>
    <length>254</length>
    <type>Text</type>
</CustomField>