force-app/main/default/objects/Account/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Affiliate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Affiliate)</relationshipLabel>
    <relationshipName>Affiliates</relationshipName>
    <type>Lookup</type>
</CustomField>