force-app/main/default/objects/Account/fields/Affiliate_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_ID__c</fullName>
    <description>Unique ID of the Referral Partner who referred the Account.  This is mapped from the Lead or Contact, where it is auto-populated from Pardot.</description>
    <label>Affiliate ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>