force-app/main/default/objects/Account/fields/ApptegicEngagement__c.field-meta.xml
<CustomField>
    <fullName>ApptegicEngagement__c</fullName>
    <description>Engagement score based on activity</description>
    <label>Evergage Engagement</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>