force-app/main/default/objects/Account/fields/ApptegicEngagementTrend__c.field-meta.xml
<CustomField>
    <fullName>ApptegicEngagementTrend__c</fullName>
    <description>Engagement trend based on activity</description>
    <label>Evergage Eng. Trend</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>