force-app/main/default/objects/Account/fields/ApptegicLastActivity__c.field-meta.xml
<CustomField>
    <fullName>ApptegicLastActivity__c</fullName>
    <description>Last Activity within application</description>
    <label>Evergage Last Visit</label>
    <type>DateTime</type>
</CustomField>