force-app/main/default/objects/Account/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Other (Check etc.)</fullName>
            </value>
            <value>
                <fullName>Paid by other Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>