force-app/main/default/objects/Account/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <label>Billing Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill to Parent</fullName>
            </value>
            <value>
                <fullName>Bill Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>