force-app/main/default/objects/Account/fields/Canadian_Anti_Spam_Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Anti_Spam_Contact_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you have contact the office about the new Canadian anti-spam laws</inlineHelpText>
    <label>Canadian Anti Spam Contact Made</label>
    <type>Checkbox</type>
</CustomField>