force-app/main/default/objects/Account/fields/Care_Credit_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Care_Credit_Merchant_ID__c</fullName>
    <description>Enter the Care Credit Merchant ID, if this customer has Care Credit. If they do not, leave this field blank.</description>
    <inlineHelpText>Enter the Care Credit Merchant ID, if this customer has Care Credit. If they do not, leave this field blank.</inlineHelpText>
    <label>Care Credit Merchant ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>