force-app/main/default/objects/Account/fields/Child_Accts_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Child_Accts_Active_Customer__c</fullName>
    <description>Populated by Lookup Rollup Summary.  All child Accounts that meet the following filter: Type = &#39;Customer&#39; AND RecurSoft__Status__c = &#39;Active&#39;</description>
    <label># Child Accts - Active Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>