force-app/main/default/objects/Account/fields/Child_Accts_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Child_Accts_Prospect__c</fullName>
    <description>Set by DLRS. Counts all child Accounts where Type = Prospect</description>
    <label># Child Accts - Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>