force-app/main/default/objects/Account/fields/Contact_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Count__c</fullName>
    <label>Contact Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>