force-app/main/default/objects/Account/fields/Contact_Email_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Duplicates__c</fullName>
    <formula>Contact_Email_Count__c &gt; 0 &amp;&amp;
Contact_Email_Count_Distinct__c &gt; 0 &amp;&amp;
Contact_Email_Count__c &gt; Contact_Email_Count_Distinct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Duplicates</label>
    <type>Checkbox</type>
</CustomField>