force-app/main/default/objects/Account/fields/Contract_Signer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer_First_Name__c</fullName>
    <description>Stores the contract Signer&#39;s name from Sugar</description>
    <label>Contract Signer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>