force-app/main/default/objects/Account/fields/Contract_Signer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer_Last_Name__c</fullName>
    <description>Historical field from Sugar</description>
    <label>Contract Signer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>