force-app/main/default/objects/Account/fields/Converted_from_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Competitor__c</fullName>
    <label>Converted from Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 Patient Care</fullName>
            </value>
            <value>
                <fullName>DemandForce</fullName>
            </value>
            <value>
                <fullName>eCentral</fullName>
            </value>
            <value>
                <fullName>eReminders</fullName>
            </value>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Patient Activator</fullName>
            </value>
            <value>
                <fullName>Phone Tree</fullName>
            </value>
            <value>
                <fullName>Practice Mojo</fullName>
            </value>
            <value>
                <fullName>Revenue Wel</fullName>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Teledental</fullName>
            </value>
            <value>
                <fullName>Televox</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Websystem3</fullName>
            </value>
            <value>
                <fullName>1800 Dentists</fullName>
            </value>
            <value>
                <fullName>AbleDent</fullName>
            </value>
            <value>
                <fullName>Weave</fullName>
            </value>
            <value>
                <fullName>Updox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>