force-app/main/default/objects/Account/fields/Create_Sync_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Sync_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clicking on this will create a sync list case.</inlineHelpText>
    <label>Create Sync Case</label>
    <type>Checkbox</type>
</CustomField>