force-app/main/default/objects/Account/fields/Current_Monthly_MSF__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_MSF__c</fullName>
    <label>Current Monthly MSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>