force-app/main/default/objects/Account/fields/Current_of_Calls_Generated_from_HG__c.field-meta.xml
<CustomField>
    <fullName>Current_of_Calls_Generated_from_HG__c</fullName>
    <description>To be populated from the most recent Milestone Moment</description>
    <label>Current # of Calls Generated from HG</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>