force-app/main/default/objects/Account/fields/Current_of_Competitors_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Current_of_Competitors_Blocked__c</fullName>
    <description>To be updated from the most recent Milestone Moment</description>
    <label>Current # of Competitors Blocked</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>