force-app/main/default/objects/Account/fields/Current_of_confirms_received_via_SR__c.field-meta.xml
<CustomField>
    <fullName>Current_of_confirms_received_via_SR__c</fullName>
    <description>To be populated from most recent Milestone Moment</description>
    <label>Current # of confirms received via SR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>