force-app/main/default/objects/Account/fields/Current_of_LL_Appt_Requests_Received__c.field-meta.xml
<CustomField>
    <fullName>Current_of_LL_Appt_Requests_Received__c</fullName>
    <description>To be populated by the most recent Milestone Moment</description>
    <label>Current # of LL Appt Requests Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>