force-app/main/default/objects/Account/fields/Current_Partner__c.field-meta.xml
<CustomField>
    <fullName>Current_Partner__c</fullName>
    <label>Current Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>