force-app/main/default/objects/Account/fields/Current_Pulse__c.field-meta.xml
<CustomField>
    <fullName>Current_Pulse__c</fullName>
    <label>Current Pulse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severe Risk</fullName>
                <color>#FF0000</color>
                <label>Severe Risk</label>
            </value>
            <value>
                <fullName>High Risk</fullName>
                <color>#FF9900</color>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Some Risk</fullName>
                <color>#FFFF66</color>
                <label>Some Risk</label>
            </value>
            <value>
                <fullName>Fairly Satisfied</fullName>
                <color>#0B6FCE</color>
                <label>Fairly Satisfied</label>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
                <color>#33CCFF</color>
                <label>Very Satisfied</label>
            </value>
            <value>
                <fullName>Extremely Satisfied</fullName>
                <color>#33CC00</color>
                <label>Extremely Satisfied</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#000000</color>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>