force-app/main/default/objects/Account/fields/Current_Pulse_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Pulse_Date__c</fullName>
    <label>Current Pulse Date</label>
    <type>Date</type>
</CustomField>