force-app/main/default/objects/Account/fields/Current_Pulse_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Pulse_Value__c</fullName>
    <formula>CASE( Current_Pulse__c , &quot;Severe Risk&quot;, &quot;SevereRisk&quot;, 
      &quot;High Risk&quot;, &quot;HighRisk&quot;,
      &quot;Some Risk&quot;, &quot;SomeRisk&quot;, 
      &quot;Fairly Satisfied&quot;, &quot;FairlySatisfied&quot;, 
      &quot;Very Satisfied&quot;, &quot;VerySatisfied&quot;, 
      &quot;Extremely Satisfied&quot;, &quot;ExtremelySatisfied&quot;, 
      &quot;None&quot;)</formula>
    <label>Current Pulse Value</label>
    <type>Text</type>
</CustomField>