force-app/main/default/objects/Account/fields/Current_Recare_Dollars_Generated_via_SR__c.field-meta.xml
<CustomField>
    <fullName>Current_Recare_Dollars_Generated_via_SR__c</fullName>
    <description>To be populated by the most recent Milestone Moment</description>
    <label>Current Recare Dollars Generated via SR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>