force-app/main/default/objects/Account/fields/Custom_Settings_Completed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Completed__c</fullName>
    <description>Holds the value from the Activation Case</description>
    <label>Custom Settings Completed</label>
    <type>DateTime</type>
</CustomField>