force-app/main/default/objects/Account/fields/Custom_Settings_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Scheduled_For__c</fullName>
    <description>Holds the value from the Activation Case</description>
    <label>Custom Settings Scheduled For</label>
    <type>DateTime</type>
</CustomField>