force-app/main/default/objects/Account/fields/Day_70_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Day_70_Engagement_Score__c</fullName>
    <description>Records what the Engagement Score was after 70 days from signing up.</description>
    <label>Day 70 Engagement Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>