force-app/main/default/objects/Account/fields/Days_since_last_Pulse__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Pulse__c</fullName>
    <formula>Today() - Current_Pulse_Date__c</formula>
    <label>Days since last Pulse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>