force-app/main/default/objects/Account/fields/Days_to_Activate_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate_Open__c</fullName>
    <description>Calculates how many days it took to activate the account or how long it&#39;s been since it was sold</description>
    <formula>if( isblank(Admin_FMS__c), Today() - Probable_Most_Recent_K_Date__c, If( Admin_FMS__c - Probable_Most_Recent_K_Date__c &lt; 0 , 0 , if(  RecurSoft__Customer_Active_Date__c &lt;  Probable_Most_Recent_K_Date__c , Admin_FMS__c - Probable_Most_Recent_K_Date__c, Admin_FMS__c - Probable_Most_Recent_K_Date__c)))</formula>
    <label>Days to Activate/Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>