force-app/main/default/objects/Account/fields/Do_Not_Support_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Support_Reason__c</fullName>
    <label>Do Not Support Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Concern</fullName>
            </value>
            <value>
                <fullName>Legal Action</fullName>
            </value>
            <value>
                <fullName>Client Dispute</fullName>
            </value>
            <value>
                <fullName>Client Pending Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>