force-app/main/default/objects/Account/fields/Do_Not_Support_Sync__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Support_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if we do not need to auto create sync down cases for this account</inlineHelpText>
    <label>Do Not Support Sync</label>
    <type>Checkbox</type>
</CustomField>