force-app/main/default/objects/Account/fields/Early_PCU_Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>Early_PCU_Call_Priority__c</fullName>
    <description>Used for Early PCU Target Creation</description>
    <label>Early PCU Call Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>