force-app/main/default/objects/Account/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint parameter used in Intacct Max request Url.</description>
    <formula>$Api.Partner_Server_URL_70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endpoint</label>
    <type>Text</type>
</CustomField>