force-app/main/default/objects/Account/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <description>Flag to identify Enterprise accounts</description>
    <formula>RecordTypeId = &quot;012i0000001DyqC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Account</label>
    <type>Checkbox</type>
</CustomField>