force-app/main/default/objects/Account/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <description>Holds the value of the Activation Case First Contact Date</description>
    <label>First Contact Date</label>
    <type>DateTime</type>
</CustomField>