force-app/main/default/objects/Account/fields/Grandchild_Accts_Inactive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Grandchild_Accts_Inactive_Customer__c</fullName>
    <description>Populated by Lookup Rollup Summary.  Sum of Child_Accts_Inactive_Customer__c on all child Accounts</description>
    <label># Grandchild Accts - Inactive Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>