force-app/main/default/objects/Account/fields/Grandchild_Accts_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Grandchild_Accts_Prospect__c</fullName>
    <description>Sum of all child Account &quot;# Child Accts - Prospect&quot; values. Set by DLRS</description>
    <label># Grandchild Accts - Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>