force-app/main/default/objects/Account/fields/Group_Database__c.field-meta.xml
<CustomField>
    <fullName>Group_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifying which account holds the database</description>
    <inlineHelpText>Identifying which account holds the database</inlineHelpText>
    <label>Group Database</label>
    <type>Checkbox</type>
</CustomField>