force-app/main/default/objects/Account/fields/Has_Contractually_Live_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Has_Contractually_Live_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Contractually Live Subscriptions</label>
    <type>Checkbox</type>
</CustomField>