force-app/main/default/objects/Account/fields/Healthgrades_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Eligible__c</fullName>
    <description>Checked if a customer is eligible for Healthgrades.  Based on Sub Vertical</description>
    <formula>IF(  Healthgrades_Pricebook__c = &quot;Not Eligible&quot; , false , true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if a customer is eligible for Healthgrades.  Based on Sub Vertical</inlineHelpText>
    <label>Healthgrades Eligible</label>
    <type>Checkbox</type>
</CustomField>