force-app/main/default/objects/Account/fields/Healthgrades_Interest__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the office has expressed interest in signing up for Healthgrades</description>
    <inlineHelpText>Check this box if the office has expressed interest in signing up for Healthgrades</inlineHelpText>
    <label>Healthgrades Interest</label>
    <type>Checkbox</type>
</CustomField>