force-app/main/default/objects/Account/fields/Healthgrades_Interest_Received__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Interest_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the AE working Healthgrades deals to check when received.</description>
    <inlineHelpText>For the AE working Healthgrades deals to check when received.</inlineHelpText>
    <label>Healthgrades Interest Received</label>
    <type>Checkbox</type>
</CustomField>