force-app/main/default/objects/Account/fields/Healthgrades_Notes__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Notes__c</fullName>
    <label>Healthgrades Notes</label>
    <type>TextArea</type>
</CustomField>